circleci config changes

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,9 +14,9 @@ jobs:
       - run:
           command: |
             curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
-            sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
+            add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
             apt-cache policy docker-ce
-            sudo apt-get install -y docker-ce
+            apt-get install -y docker-ce
             echo "INFO: `date`: ------------------Docker package installation complete--------------------------"
       - run:
           command: |
