circleci config changes

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,8 +4,6 @@ jobs:
     docker:
       - image: ubuntu:xenial
     steps:
-      - checkout
-      - run: ls -la
       - run: apt-get update
       - run: apt-get -y install build-essential
       - run: apt-get -y install curl
@@ -13,7 +11,7 @@ jobs:
       - run: apt-get -y install git-all
       - run:
           command: |
-            curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
+            curl -fsSL https://download.docker.com/linux/ubuntu/gpg | apt-key add -
             add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
             apt-cache policy docker-ce
             apt-get install -y docker-ce
