--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ jobs:
     docker:
       - image: ubuntu:xenial
     steps:
-      - run: sudo apt install -y yum
+      - run: apt install -y yum
       - run: yum install -y epel-release
       - run: yum update -y epel-release
       - run: apt-get update
