--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,8 +6,7 @@ jobs:
     steps:
       - run: apt-get update
       - run: apt install -y yum
-      - run: yum install -y epel-release
-      - run: yum update -y epel-release
+      - run: apt-get -y install lsb-release
       - run: apt-get -y install build-essential
       - run: apt-get -y install curl
       - run: apt-get -y install unzip
